--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta name="description"
     content="Christ Community Lutheran School (CCLS) is a distinctively Lutheran Christian school that strives to provide quality education while building a Christ-centered community. The school, which will be centrally located in the Almena area, is set to launch in the fall of 2024 and hopes to offer 1st through 8th grade in the first year. CCLS is gift-driven, relying on generous hearts for sustainability. Find out how you can help support Christian education in your community.">
   <link rel="icon" href="static/images/Christ-Community-Logo.png">
-  <title>Christ Community Lutheran School - Building Christ-Centered Community Through Quality Education in Almena, WI</title>
+  <title>Christ Community Lutheran School - Building Christ-Centered Community Through Quality Education in Almena, WI
+  </title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
   <script delay src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
@@ -48,9 +49,7 @@
 </head>
 
 <body>
-  <section class="hero-container">
-    <div class="hero-image"></div>
-    <nav class="navbar navbar-expand-lg navbar-light bg-body">
+<nav class="navbar navbar-expand-lg navbar-light bg-body">
       <div class="container">
         <a class="navbar-brand" href="#"><img src=" static/images/Christ-Community-Logo.png" width="100px"
             height="100px" alt="School logo" /></a>
@@ -72,7 +71,17 @@
         </div>
       </div>
     </nav>
+  <section class="hero-container">
+    <div class="hero-image"></div>
+    <div class="px-4 py-5 my-5 text-center">
     <h1 class="hero-title display-1 fw-bolder">Christ Community<br /> Lutheran School</h1>
+    <div class="col-lg-6 mx-auto">
+    <p class="lead fs-4 mb-4">Christ Community Lutheran School (CCLS) is a distinctively Lutheran Christian school that strives to provide quality education while building a Christ-centered community. The school, which will be centrally located in the Almena area, is set to launch in the fall of 2024 and hopes to offer 1st through 8th grade in the first year. CCLS is gift-driven, relying on generous hearts for sustainability.</p>
+    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+        <a href="#faq" class="btn btn-primary btn-lg px-4 gap-3">Learn More</a>
+        <a href="https://ccls.revtrak.net/" class="btn btn-outline-dark btn-lg px-4">Donate Now</a>
+      </div>
+      </div>
   </section>
 
   <section class="container my-5" id="faq">
@@ -532,10 +541,11 @@
           <a href="#faq" class="nav-link px-2 text-body-secondary">FAQs</a>
         </li>
       </ul>
-      
-        <p class="text-center text-body-secondary">© 2023 Christ Community Lutheran School
-          <br>P.O. Box 120
-          <br>Almena, WI 54805</p>
+
+      <p class="text-center text-body-secondary">© 2023 Christ Community Lutheran School
+        <br>P.O. Box 120
+        <br>Almena, WI 54805
+      </p>
     </footer>
   </div>
 </body>
