Dealt with widow in subtitle

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description"
-    content="Christ Community Lutheran School (CCLS) is a distinctively Lutheran Christian school that strives to provide quality education while building a Christ-centered community. The school, which will be centrally located in the Almena area, is set to launch in the fall of 2024 and hopes to offer 1st through 8th grade in the first year. CCLS is gift-driven, relying on generous hearts for sustainability. Find out how you can help support Christian education in your community.">
+    content="Christ Community Lutheran School (CCLS) is a distinctively Lutheran school striving to provide quality education while building Christ-centered community. 
+    The school, which will be centrally located in the Almena area, is set to launch for grades 1-8 in the fall of 2024.
+    CCLS is gift-driven, relying on generous hearts for sustainability.">
   <link rel="icon" href="static/images/Christ-Community-Logo.png">
   <title>Christ Community Lutheran School - Building Christ-Centered Community Through Quality Education in Almena, WI
   </title>
@@ -76,7 +78,9 @@
     <div class="px-4 py-5 my-5 text-center">
     <h1 class="hero-title display-1 fw-bolder">Christ Community<br /> Lutheran School</h1>
     <div class="col-lg-6 mx-auto">
-    <p class="lead fs-4 mb-4">Christ Community Lutheran School (CCLS) is a distinctively Lutheran Christian school that strives to provide quality education while building a Christ-centered community. The school, which will be centrally located in the Almena area, is set to launch in the fall of 2024 and hopes to offer 1st through 8th grade in the first year. CCLS is gift-driven, relying on generous hearts for sustainability.</p>
+    <p class="lead fs-4 mb-4">Christ Community Lutheran School (CCLS) is a distinctively Lutheran school striving to provide quality education while building Christ-centered community. 
+    The school, which will be centrally located in the Almena area, is set to launch for grades 1-8 in the fall of 2024.<br> 
+    CCLS is gift-driven, relying on generous hearts for sustainability.</p>
     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
         <a href="#faq" class="btn btn-primary btn-lg px-4 gap-3">Learn More</a>
         <a href="https://ccls.revtrak.net/" class="btn btn-outline-dark btn-lg px-4">Donate Now</a>
