--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description"
-    content="Christ Community Lutheran School (CCLS) is a distinctively Lutheran school striving to provide quality education while building Christ-centered community. 
+  <meta name="description" content="Christ Community Lutheran School (CCLS) is a distinctively Lutheran school striving to provide quality education while building Christ-centered community. 
     The school, which will be centrally located in the Almena area, is set to launch for grades 1-8 in the fall of 2024.
     CCLS is gift-driven, relying on generous hearts for sustainability.">
   <link rel="icon" href="static/images/Christ-Community-Logo.png">
@@ -51,7 +50,8 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-body">
+  <header class="d-flex flex-column">
+    <nav class="navbar navbar-expand-lg navbar-light bg-body">
       <div class="container">
         <a class="navbar-brand" href="#"><img src=" static/images/Christ-Community-Logo.png" width="100px"
             height="100px" alt="School logo" /></a>
@@ -73,20 +73,23 @@
         </div>
       </div>
     </nav>
-  <section class="hero-container">
     <div class="hero-image"></div>
-    <div class="px-4 py-5 my-5 text-center">
-    <h1 class="hero-title display-1 fw-bolder">Christ Community<br /> Lutheran School</h1>
-    <div class="col-lg-6 mx-auto">
-    <p class="lead fs-4 mb-4">Christ Community Lutheran School (CCLS) is a distinctively Lutheran school striving to provide quality education while building Christ-centered community. 
-    The school, which will be centrally located in the Almena area, is set to launch for grades 1-8 in the fall of 2024.<br> 
-    CCLS is gift-driven, relying on generous hearts for sustainability.</p>
-    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-        <a href="#faq" class="btn btn-primary btn-lg px-4 gap-3">Learn More</a>
-        <a href="https://ccls.revtrak.net/" class="btn btn-outline-dark btn-lg px-4">Donate Now</a>
+    <div class="d-flex flex-grow-1 align-items-center">
+      <div class="p-5 my-5 text-center">
+        <h1 class="display-1 fw-bolder mb-3">Christ Community<br /> Lutheran School</h1>
+        <div class="lead col-xl-8 mx-auto mb-3">Christ Community Lutheran School (CCLS) is a distinctively Lutheran
+          school striving to
+          provide quality education while building Christ-centered community.
+          The school, which will be centrally located in the Almena area, is set to launch for grades 1-8 in the fall of
+          2024.
+          CCLS is gift-driven, relying on generous hearts for&nbsp;sustainability.</div>
+        <div class="d-grid pt-3 gap-2 d-sm-flex justify-content-sm-center">
+          <a href="#faq" class="btn btn-primary btn-lg px-4 gap-3">Learn More</a>
+          <a href="https://ccls.revtrak.net/" class="btn btn-outline-dark btn-lg px-4">Donate Now</a>
+        </div>
       </div>
-      </div>
-  </section>
+    </div>
+  </header>
 
   <section class="container my-5" id="faq">
     <div class="row justify-content-center">
