--- a/index.html
+++ b/index.html
@@ -27,22 +27,16 @@
         item.addEventListener('shown.bs.collapse', function () {
           // Get the height of the item content
           var itemHeight = this.scrollHeight
-
-          // if itemHeight is bigger than window, then just scroll to top
-          if (itemHeight >= window.innerHeight) {
-            window.scrollTo({
-              top: this.offsetTop,
+          var previousSibling = item.previousElementSibling;
+          var scrollOffset = 0;
+          
+          //how big is the header of the previous item?
+          if (previousSibling.querySelector(".accordion-header")) { scrollOffset = previousSibling.querySelector(".accordion-header").scrollHeight; }
+          window.scrollTo({
+              top: this.offsetTop - scrollOffset,
               behavior: 'smooth'
-            })
-            // if the item is lower than it would be when we scroll down, then scroll
-            // We use (window.innerHeight - itemHeight)/2 so that we can see that there are
-            // items below the current item.
-          } else if (this.offsetTop - (window.innerHeight - itemHeight) / 2 > window.scrollY) {
-            window.scrollTo({
-              top: this.offsetTop - (window.innerHeight - itemHeight) / 2,
-              behavior: 'smooth'
-            })
-          }
+            });
+          
         })
       })
     })
@@ -75,14 +69,9 @@
     </nav>
     <div class="hero-image"></div>
     <div class="d-flex flex-grow-1 align-items-center">
-      <div class="p-5 my-5 text-center">
+      <div class="p-5 my-5 mx-auto text-center">
         <h1 class="display-1 fw-bolder mb-3">Christ Community<br /> Lutheran School</h1>
-        <div class="lead col-xl-8 mx-auto mb-3">Christ Community Lutheran School (CCLS) is a distinctively Lutheran
-          school striving to
-          provide quality education while building Christ-centered community.
-          The school, which will be centrally located in the Almena area, is set to launch for grades 1-8 in the fall of
-          2024.
-          CCLS is gift-driven, relying on generous hearts for&nbsp;sustainability.</div>
+        <h4 class="lead col-xl-8 mb-3">Christ-centered. Distinctively Lutheran.<br>Opening Fall 2024.</h4>
         <div class="d-grid pt-3 gap-2 d-sm-flex justify-content-sm-center">
           <a href="#faq" class="btn btn-primary btn-lg px-4 gap-3">Learn More</a>
           <a href="https://ccls.revtrak.net/" class="btn btn-outline-dark btn-lg px-4">Donate Now</a>
