Fixing margin issue

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="d-flex flex-grow-1 align-items-center">
       <div class="p-5 my-5 mx-auto text-center">
         <h1 class="display-1 fw-bolder mb-3">Christ Community<br /> Lutheran School</h1>
-        <h4 class="lead col-xl-8 mb-3">Christ-centered. Distinctively Lutheran.<br>Opening Fall 2024.</h4>
+        <h4 class="lead col-xl-8 mx-auto mb-3">Christ-centered. Distinctively Lutheran.<br>Opening Fall 2024.</h4>
         <div class="d-grid pt-3 gap-2 d-sm-flex justify-content-sm-center">
           <a href="#faq" class="btn btn-primary btn-lg px-4 gap-3">Learn More</a>
           <a href="https://ccls.revtrak.net/" class="btn btn-outline-dark btn-lg px-4">Donate Now</a>
